name:          raaz-primitives
version:       0.0.0.0
synopsis:      Cryptographic primitives for the raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-primitives

library
  exposed-modules: Raaz.Types
                 , Raaz.ByteSource
                 , Raaz.Hash
                 , Raaz.Primitives
                 , Raaz.MAC
                 , Raaz.Util.ByteString
                 , Raaz.Util.Ptr
                 , Raaz.Util.TH
                 , Raaz.System.Parameters
  build-depends: base
               , bytestring
               , template-haskell
               , cpu
  ghc-options: -Wall
  include-dirs: includes
  includes: raaz/primitives.h
          , raaz/primitives/config.h
          , raaz/primitives/load.h
  install-includes: raaz/primitives.h
                  , raaz/primitives/config.h
                  , raaz/primitives/load.h
                  , raaz/system/parameters.h
