name:          raaz-primitives
version:       0.0.0.0
synopsis:      Cryptographic primitives for the raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Custom
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-primitives

library
  exposed-modules: Raaz.ByteSource
                 , Raaz.Memory
                 , Raaz.Primitives
                 , Raaz.Primitives.Hash
                 , Raaz.Primitives.MAC
                 , Raaz.System.Parameters
                 , Raaz.Types
                 , Raaz.Util.ByteString
                 , Raaz.Util.Ptr
                 , Raaz.Util.SecureMemory
                 , Raaz.Util.TH
  build-depends: base
               , bytestring
               , cpu
               , mtl
               , QuickCheck==2.4.*
               , template-haskell
               , test-framework==0.6.*
               , test-framework-quickcheck2==0.2.*
               --
               -- Dependency on other raaz-packages.
               --
               , raaz-config
  ghc-options: -Wall

  c-sources: cbits/raaz/memory.c
  include-dirs: includes
  includes: raaz/primitives.h
          , raaz/primitives/config.h
          , raaz/primitives/load.h
  install-includes: raaz/primitives.h
                  , raaz/primitives/autoconf.h
                  , raaz/primitives/config.h
                  , raaz/primitives/load.h
