name:    raaz-primitives
version: 0.0.0.1

synopsis:    Cryptographic primitives for the raaz library

description: This package abstracts out cryptographic primitives like
  hashes, ciphers, macs etc by providing types, type classes
  etc. Implementation of specific implementations are in packages of
  their own. We also provides common types and functions that might be
  used accross the other raaz packages here.

homepage:    http://github.com/piyush-kurur/raaz

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

category:      Codec, Raaz
build-type:    Custom
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-primitives

library
  exposed-modules: Raaz.ByteSource
                 , Raaz.Memory
                 , Raaz.Primitives
                 , Raaz.Primitives.Hash
--                 , Raaz.Primitives.MAC
                 , Raaz.System.Parameters
                 , Raaz.Types
                 , Raaz.Util.ByteString
                 , Raaz.Util.Gadget
                 , Raaz.Util.Ptr
                 , Raaz.Util.SecureMemory
                 , Raaz.Util.TH
  build-depends: base                           >= 4.5 && < 4.7
               , bytestring                     >= 0.9 && < 0.11
               , cpu                            >= 0.1 && < 0.2
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               , QuickCheck                     >= 2.4 && < 2.7
               , template-haskell               >= 2.7 && < 2.9
               , test-framework                 >= 0.6 && < 0.7
               , test-framework-quickcheck2     >= 0.2 && < 0.3
               --
               -- Dependency on other raaz-packages.
               --
               , raaz-config                    >= 0.0.0.1 && < 0.0.0.2
  ghc-options: -Wall

  c-sources: cbits/raaz/memory.c
  include-dirs: includes
  includes: raaz/primitives.h
          , raaz/primitives/config.h
          , raaz/primitives/load.h
  install-includes: raaz/primitives.h
                  , raaz/primitives/autoconf.h
                  , raaz/primitives/config.h
                  , raaz/primitives/load.h
