name:          raaz-random
version:       0.0.0.1
synopsis:      Implementation of the Cryptographically secure random number generators.
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Satvik Chauhan
maintainer:    satvikc@iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-random

library
  exposed-modules: Raaz.Random
  other-modules: Raaz.Random.Stream
               , Raaz.Random.Number
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               , entropy                        >= 0.2 && < 0.3
               , tagged                         >= 0.7 && < 0.8
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-cipher                    >=0.0.0.1 && < 0.0.0.2
  ghc-options: -Wall

  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:

test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs

  other-modules: Modules.Stream
               , Modules.Number

  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.5 && < 0.6
               , HUnit                          >= 1.2 && < 1.3
               , QuickCheck                     >= 2.4 && < 2.7
               , test-framework                 >= 0.6 && < 0.9
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.4
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-random                    >=0.0.0.1 && < 0.0.0.2
               , raaz-cipher                    >=0.0.0.1 && < 0.0.0.2

  if impl(ghc >= 7.6)
    extensions: DataKinds
