name:          raaz-ssh
version:       0.0.0.0
synopsis:      An implementation of the ssh protocol.
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
category:      Network, Raaz
build-type:    Simple
cabal-version: >=1.8

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-ssh

library
  exposed-modules: Raaz.Network.SSH.Transport
  other-modules: Paths_raaz_ssh
  build-depends: base
               , bytestring


test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base
