name:          raaz-tests
version:       0.0.0.0
synopsis:      Generic tests for raaz-packages and test suites for
               raaz-primitives
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-tests

library
  exposed-modules: Raaz.Test
                 , Raaz.Test.CryptoStore
                 , Raaz.Test.Hash
  other-modules: Raaz.Test.Instances
  build-depends: base
               , bytestring
               , HUnit==1.2.*
               , test-framework==0.6.*
               , test-framework-hunit
               , test-framework-quickcheck2==0.2.*
               , QuickCheck==2.4.*
               , raaz-primitives==0.0.0.0
  ghc-options: -Wall

test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall

  cc-options: -Wall -O3
  c-sources: cbits/portable/load_test.c
  include-dirs: cbits/portable
  includes: cbits/portable/load_test.h
  build-depends: base
               , bytestring
               , HUnit==1.2.*
               , test-framework==0.6.*
               , test-framework-hunit
               , test-framework-quickcheck2==0.2.*
               , QuickCheck==2.4.*
               , raaz-primitives==0.0.0.0
               , raaz-tests==0.0.0.0