cabal-version: 2.2

name:    raaz
version: 0.3.0

synopsis: The raaz cryptographic library.

description: Raaz is a cryptographic library for Haskell. The library
  is designed with a special emphasis on using the type system of
  Haskell to eliminate a large set of vulnerabilities like buffer
  overflows, timing attacks etc. It also strives to achieve this
  safety with no compromise on performance.

homepage: https://github.com/raaz-crypto/raaz

license:      BSD-3-Clause
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

category:      Codec, Raaz
build-type:    Simple


-- extra-source-files: CHANGELOG.md
--                   , README.md
--                   , Releasing.md
--                   , Reviewing.md

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz

---------------------------- The common clause ------------------------------------------------

common defaults
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base                    >= 4.7  &&  < 4.12
               , bytestring              >= 0.9  &&  < 0.11
               , deepseq                 >= 1.1  &&  < 1.5
               , vector                  >= 0.7.1 && < 0.13
               , mtl

  ----------------------- System specific configurations ----------------------------------

  if os(linux)
     cc-options: -DPLATFORM_LINUX
  if os(osx)
     cc-options: -DPLATFORM_OSX
  if os(openbsd)
     cc-options: -DPLATFORM_OPENBSD
  if os(windows)
     cc-options: -DPLATFORM_WINDOWS -DUNICODE
     cpp-options: -DPLATFORM_WINDOWS
     extra-libraries: Advapi32, Kernel32
     build-tools: hsc2hs


library
  import: defaults
  hs-source-dirs: .
  build-depends: raaz-core                 >= 0.3 && < 0.4
               , raaz-implementation       >= 0.3 && < 0.4
               , raaz-core-indef           >= 0.3 && < 0.4
  exposed-modules: Raaz
                 , Raaz.Hash
                 , Raaz.Cipher
                 , Raaz.Random
                 , Raaz.Random.Internal
                 , Raaz.Random.ChaCha20PRG
                 , Paths_raaz
  autogen-modules: Paths_raaz
  mixins: raaz-core-indef (Raaz.Primitive.Util as Raaz.Hash.Blake2b.Util)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.Blake2b.Implementation.CPortable)
        , raaz-core-indef (Raaz.Primitive.Util as Raaz.Hash.Blake2s.Util)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.Blake2s.Implementation.CPortable)
        , raaz-core-indef (Raaz.Primitive.Util as Raaz.Hash.Sha256.Util)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.Sha256.Implementation.CPortable)
        , raaz-core-indef (Raaz.Primitive.Util as Raaz.Hash.Sha512.Util)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.Sha512.Implementation.CPortable)
        , raaz-core-indef (Raaz.Primitive.Util as Raaz.Cipher.ChaCha20.Util)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.ChaCha20.Implementation.CPortable)

---------------------------- Executables -------------------------------------------------

executable raaz
  import: defaults
  hs-source-dirs: bin
  main-is: Main.hs
  other-modules: Command.Checksum
               , Command.Rand
               , Command.Info
               , Usage
  build-depends: optparse-applicative >= 0.13.0.0
               , raaz-core
               , raaz
  if impl(ghc < 8)
    -- 'transformers' needed for "Control.Monad.IO.Class" only
    -- starting with base-4.9 we don't need 'transformers' anymore
    build-depends: transformers

-- ---------------------------- Test suit -----------------------------------------------------

test-suite spec
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Spec.hs

  build-depends: raaz
               , raaz-core
  build-depends: HUnit                          >= 1.2
               , QuickCheck                     >= 2.4
               , hspec
               , hspec-discover
               , transformers
               , vector

  build-tool-depends: hspec-discover:hspec-discover
  if !os(windows)
    cpp-options: -DHAVE_DEV_NULL

  other-modules: Common
               , Common.Cipher
               , Common.Hash
               , Common.Imports
               , Common.Instances
               , Common.Utils
               , Raaz.Cipher.ChaCha20Spec
               , Raaz.Core.ByteSourceSpec
               , Raaz.Core.EncodeSpec
               , Raaz.Core.MemorySpec
               , Raaz.Core.Types.WordSpec
               , Raaz.Core.Util.ByteStringSpec
               , Raaz.RandomSpec
               , Raaz.Hash.Sha256Spec
               , Raaz.Hash.Sha512Spec
               , Raaz.Hash.Blake2Spec

--------------------------- Benchmarkings ---------------------------------------------

library benchmark-internal
  import: defaults
  hs-source-dirs: benchmarks/internal
  exposed-modules: Benchmark.Primitive
                 , Benchmark.Types
  build-depends: criterion >= 1.3
               , pretty
               , raaz-core                 >= 0.3 && < 0.4
               , raaz-core-indef           >= 0.3 && < 0.4

benchmark primitives
  import: defaults
  hs-source-dirs: benchmarks
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends: criterion                 >= 1.0 && < 1.5
               , pretty
               , raaz                      >= 0.3 && < 0.4
               , raaz-core
               , raaz-implementation       >= 0.3 && < 0.4
               , benchmark-internal

  mixins: benchmark-internal (Benchmark.Primitive as Benchmark.Blake2b.CPortable, Benchmark.Types)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.Blake2b.Implementation.CPortable)

        , benchmark-internal (Benchmark.Primitive as Benchmark.Blake2s.CPortable)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.Blake2s.Implementation.CPortable)

        , benchmark-internal (Benchmark.Primitive as Benchmark.ChaCha20.CPortable)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.ChaCha20.Implementation.CPortable)

        , benchmark-internal (Benchmark.Primitive as Benchmark.Sha256.CPortable)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.Sha256.Implementation.CPortable)

        , benchmark-internal (Benchmark.Primitive as Benchmark.Sha512.CPortable)
          requires   (Raaz.Primitive.Implementation as Raaz.Primitive.Sha512.Implementation.CPortable)
