name:    raaz-core
version: 0.0.0.1

synopsis: The core of the raaz cryptographic library.

description: This package defines core types and classes that is used
  by the rest of the raaz library. We also provides common types and
  functions that might be used accross the other raaz packages here.
  Besides the basic types and classes, it defines cryptographic
  primitives like hashes, ciphers, macs etc..

homepage: http://github.com/raaz-crypto/raaz

license:      BSD3
license-file: LICENSE
author:       Piyush P Kurur
maintainer:   ppk@cse.iitk.ac.in

category:      Codec, Raaz
build-type:    Custom
cabal-version: >=1.9.2

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz
  subdir: tests

flag auto-configure
  description: Detects and configurs system parameters automatically
  default: True

test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: core
  main-is: Main.hs
  ghc-options: -Wall

  if os(linux)
     cc-options: -Wall -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:

  c-sources: tests/cbits/raaz/tests/load_test.c

  other-modules: Modules.C.Load
               , Modules.Types
               , Modules.Util.ByteString

  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , HUnit                          >= 1.2 && < 1.3
               , QuickCheck                     >= 2.4 && < 2.8
               , test-framework                 >= 0.6 && < 0.9
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.4

               --
               -- Dependency on other raaz packages.
               --
               , raaz-core                      >= 0.0.0.1 && < 0.0.0.2
