name:          raaz-modular
version:       0.0.0.1
synopsis:      Implementation of the Modular arithmetic based algorithms for raaz library
homepage:      http://github.com/raaz-crypto/raaz
license:       BSD3
license-file:  LICENSE
author:        Satvik Chauhan
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz
  subdir: raaz-modular

library
  exposed-modules: Raaz.Number
                 , Raaz.RSA.Exception
                 , Raaz.Public
                 , Raaz.RSA.Signature
                 , Raaz.Number.Internals
                 , Raaz.DH
                 , Raaz.KeyExchange
  other-modules: Raaz.RSA.Types
               , Raaz.RSA.Signature.Instances
               , Raaz.RSA.Signature.Primitives
               , Raaz.DH.Types
               , Raaz.DH.Exchange
               , Raaz.Number.Util
               , Raaz.Number.Modular
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , integer-gmp                    >= 0.4 && < 0.6
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-random                    >=0.0.0.1 && < 0.0.0.2
               , raaz-hash                      >=0.0.0.1 && < 0.0.0.2
               , raaz-cipher                    >=0.0.0.1 && < 0.0.0.2

  ghc-options: -Wall

  c-sources:
  include-dirs:

  if impl(ghc >= 7.6)
     cpp-options: -DUseKinds
     extensions: DataKinds

  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:



test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules: Modules.Number
               , Modules.RSA.Sign
  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , mtl                            >= 2.1 && < 2.2
               , HUnit                          >= 1.2 && < 1.3
               , QuickCheck                     >= 2.4 && < 2.8
               , test-framework                 >= 0.6 && < 0.9
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.4
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-random                    >=0.0.0.1 && < 0.0.0.2
               , raaz-modular                   >=0.0.0.1 && < 0.0.0.2
               , raaz-hash                      >=0.0.0.1 && < 0.0.0.2
  if impl(ghc >= 7.6)
     extensions: DataKinds


benchmark bench-builder-all
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is: Main.hs
  build-depends: base                           >= 4.5 && < 4.8
               , criterion                      >= 0.6 && < 0.9
               , deepseq                        >= 1.1 && < 1.4
               , random                         >= 1.0 && < 2.0
               --
               -- Raaz dependencies
               --
               , raaz-core                      >=0.0.0.1 && < 0.0.0.2
               , raaz-random                    >=0.0.0.1 && < 0.0.0.2
               , raaz-modular                   >=0.0.0.1 && < 0.0.0.2
               , raaz-hash                      >=0.0.0.1 && < 0.0.0.2
  if impl(ghc >= 7.6)
     extensions: DataKinds
